compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_negative_static_size.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type _ : array 1..-1 of int"

---
"_"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of array ( range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), No)), ) of int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 15..20: element range is too small
| note in file FileId(1) for 15..20: computed range size is -1
| error in file FileId(1) for 15..20: negative sized ranges cannot be used in `array` types
