compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_not_index_ty.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type _ : array real of real"

---
"_"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of array ( real, ) of real
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 15..19: mismatched types
| error in file FileId(1) for 15..19: `real` is not an index type
| info: an index type is an integer, a `boolean`, a `char`, an enumerated type, or a range
